# ix-devgate

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  architecture-devgate-target.md  build-plan-devgate.md  cadrage-devgate.md  docker-compose.yml  exploration-devgate-options.md  mockup-devgate-lots-1-2.html  system-design-devgate-lots-3-4.md
apps/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements-prod.txt  requirements.txt
apps/api/app/: config.py  main.py  seeds.py
apps/api/app/migrations/: env.py
apps/api/app/migrations/versions/: 0001_initial.py  0002_cloudflare_provisioning.py
apps/api/app/modules/admin/: router.py  schemas.py
apps/api/app/modules/audit/: service.py
apps/api/app/modules/auth/: rate_limit.py  router.py  schemas.py  service.py
apps/api/app/modules/cloudflare/: __init__.py  client.py  fake_client.py  provisioner.py  sync.py
apps/api/app/modules/email/: __init__.py  provider.py
apps/api/app/modules/gateway/: health.py  router.py  service.py
apps/api/app/shared/: deps.py  exceptions.py  models.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_admin_router.py  test_admin_tunnels.py  test_auth_router.py  test_cf_provisioner.py  test_cf_sync.py  test_gateway.py  test_login_flow.py  test_portal_router.py  test_secret_store_db.py  test_session_deps.py
apps/api/tests/unit/: test_audit.py  test_auth.py  test_auth_service.py  test_cf_client.py  test_cloudflare_models.py  test_email_provider.py  test_grants.py  test_rate_limit.py  test_secret_store.py
docs/: README.md  (+3 more)
(+123 files in other folders)
