[project]
name = "devgate-api"
version = "0.1.0"
description = "DevGate — API backend (auth, portal, admin, gateway)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-multipart>=0.0.12",
    "httpx>=0.28",          # pour le gateway proxy
    "itsdangerous>=2.2",    # tokens de session
    "resend>=2.0",          # provider email (swappable)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
    "mypy>=1.14",
    "httpx>=0.28",
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
